# ligma

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  prod-check.mjs  smoke.mjs  vite.config.ts
apps/web/e2e/: editor.spec.ts
apps/web/src/: index.css  main.tsx  types.ts
apps/web/src/components/: CanvasView.tsx  ChatPanel.tsx  ColorPicker.tsx  Comments.tsx  ContextMenu.tsx  Icon.tsx  LayersPanel.tsx  MenuBar.tsx  NumberField.tsx  PropertiesPanel.tsx  TextEditorOverlay.tsx  TopBar.tsx
apps/web/src/engine/: useEngine.ts
apps/web/src/lib/: color.ts  exporter.ts  expression.ts  fontMetrics.ts  fonts.ts  images.ts  useComments.ts  usePresence.ts
apps/web/src/pages/: Editor.tsx  Home.tsx
apps/worker/: package-lock.json  package.json  schema.sql  shots.mjs  tsconfig.json  wrangler.toml
apps/worker/src/: index.ts
crates/ligma-core/: Cargo.toml
crates/ligma-core/src/: clip.rs  geometry.rs  lib.rs  model.rs  render.rs  svg.rs  text.rs  tree.rs
scripts/: cf-build.sh  dev.sh
